--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "jsonwebtoken": "^9.0.2",
     "lenis": "^1.3.10",
     "lucide-react": "^0.541.0",
     "mongoose": "^8.18.0",
