--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lenis": "^1.3.10",
     "lucide-react": "^0.541.0",
