--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^12.23.12",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "keen-slider": "^6.8.6",
     "lenis": "^1.3.10",
     "lucide-react": "^0.541.0",
     "mongoose": "^8.18.0",
