--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@imagekit/next": "^2.1.3",
     "@lottiefiles/dotlottie-react": "^0.15.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -30,6 +31,7 @@
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
+    "imagekit": "^6.0.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "keen-slider": "^6.8.6",
