--- a/package.json
+++ b/package.json
@@ -1,63 +1,68 @@
 {
-  "name": "wefik-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@imagekit/next": "^2.1.3",
-    "@lottiefiles/dotlottie-react": "^0.15.2",
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.87.1",
-    "@tanstack/react-query-devtools": "^5.87.3",
-    "@tinymce/tinymce-react": "^6.3.0",
-    "axios": "^1.11.0",
-    "bcryptjs": "^3.0.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.23.12",
-    "imagekit": "^6.0.0",
-    "jose": "^6.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "keen-slider": "^6.8.6",
-    "lenis": "^1.3.10",
-    "lucide-react": "^0.541.0",
-    "mongoose": "^8.18.0",
-    "next": "15.5.0",
-    "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
-    "react-hot-toast": "^2.6.0",
-    "recharts": "^3.2.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.5"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.0",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.7"
-  }
+    "name": "wefik-website",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint",
+        "create:migration": "node createMigration.js"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^5.2.1",
+        "@imagekit/next": "^2.1.3",
+        "@lottiefiles/dotlottie-react": "^0.15.2",
+        "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-radio-group": "^1.3.8",
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tailwindcss/typography": "^0.5.0-alpha.3",
+        "@tanstack/react-query": "^5.87.1",
+        "@tanstack/react-query-devtools": "^5.87.3",
+        "@tinymce/tinymce-react": "^6.3.0",
+        "axios": "^1.11.0",
+        "bcryptjs": "^3.0.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "emailjs-com": "^3.2.0",
+        "framer-motion": "^12.23.12",
+        "imagekit": "^6.0.0",
+        "isomorphic-dompurify": "^2.28.0",
+        "jose": "^6.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "keen-slider": "^6.8.6",
+        "lenis": "^1.3.10",
+        "lucide-react": "^0.541.0",
+        "mongoose": "^8.18.0",
+        "next": "15.5.0",
+        "next-themes": "^0.4.6",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-hook-form": "^7.62.0",
+        "react-hot-toast": "^2.6.0",
+        "recharts": "^3.2.0",
+        "sonner": "^2.0.7",
+        "tailwind-merge": "^3.3.1",
+        "zod": "^4.1.5"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "autoprefixer": "^10.4.21",
+        "dotenv": "^17.2.2",
+        "eslint": "^9",
+        "eslint-config-next": "15.5.0",
+        "migrate-mongo": "^12.1.3",
+        "postcss": "^8.5.6",
+        "prettier": "^3.6.2",
+        "tailwindcss": "^4.1.13",
+        "tw-animate-css": "^1.3.7"
+    }
 }
