--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.6",
         "@tailwindcss/typography": "^0.5.0-alpha.3",
         "@tanstack/react-query": "^5.87.1",
         "@tanstack/react-query-devtools": "^5.87.3",
